fixed responsivness for question container on smaller screens

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -19,12 +19,26 @@
 
   }
 
+  @media only screen and (max-width: 768px) {
+    body{
+        flex-direction: column;
+        gap: 10px;
+        
+      }
+
+      .btn {
+        padding: 10px 20px; 
+        font-size: 14px; 
+      }
+  }
+
 /* header styling */
   #header{
     display: flex;
     justify-content: center;
     position: absolute;
     top: 10px;
+    padding-bottom: 10px;
     
   }
 
@@ -32,22 +46,20 @@
 
   .wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    width: 100vw;
-    height: 100vh;
-
   }
 
   .how-to-play, .begin{
     border: 1px solid;
-    width: 500px;
-    height: 400px;
+    width: 300px;
+    height: 200px;
     text-align: center;
     background-color: black;
     color: white;
     border-radius: 24px;
     box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    max-width:100%;
 
     &:hover{
         transform: translateY(-3px);
@@ -57,9 +69,16 @@
     }
   }
 
-.wrapper h2{
-    margin-top: 150px;
-}
+  .how-to-play + .how-to-play {
+    display: none;
+  }
+  
+  .how-to-play:hover + .how-to-play {
+    display: block;
+    cursor: pointer;
+    text-align: center ;
+  }
+  
 
 @media only screen and (max-width: 768px) {
     .wrapper{
@@ -67,7 +86,8 @@
         justify-content: space-around;
         align-items: center;
         flex-direction: column;
-        border: 1px solid;
+        gap: 10px;
+        
       }
   }
 
@@ -81,22 +101,15 @@
     display: inline-block;
   }
 
-
-
-
   button:hover {
     cursor: pointer;
   }  
   
-  
-
-  
-
 /* question and button styling */
 
 .container {
   width: 800px;
-  max-width: 80%;
+  max-width: 90%;
   border-radius: 5px;
   padding: 10px;
   box-shadow: 0 0 10px 2px;
@@ -109,12 +122,25 @@
   margin: 20px 0;
 }
 
+@media only screen and (max-width: 768px) {
+  .btn-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
 .btn {
   border-radius: 5px;
-  padding: 20px 40px;
+  padding: 15px 30px;
   color: black;
   outline: none;
-  font-size: 18px;
+  font-size: 16px;
+}
+
+@media only screen and (max-width: 768px) {
+  .btn {
+    padding: 10px 20px; 
+    font-size: 14px; 
+  }
 }
 
 .correct{
@@ -167,10 +193,15 @@
 }
 
 #question{
-  font-size: 22px;
+  font-size: 20px;
   text-align: center;
 }
 
+@media only screen and (max-width: 768px) {
+  #question {
+    font-size: 18px;
+  }
+}
 
 /* game over container  */
 
